# Pydantic

./: .env  .gitignore  README.md  pyproject.toml  requirements.txt
docs/: api_endpoints.md  architecture.md  design_notes.md
scripts/: generate_models.py
src/car_api/: main.py
src/car_api/auth/: auth.py
src/car_api/db/: mongo.py
src/car_api/models/: car_model.py
src/car_api/models/schemas/: car_schema.json
src/car_api/routes/: car_routes.py
src/car_api/services/: car_service.py
src/car_api/utils/: helpers.py
tests/: conftest.py  test_car_routes.py
